--- a/style.css
+++ b/style.css
@@ -200,3 +200,59 @@ footer .social-icons a:hover {
     color: #007bff;
 }
 
+.about-me {
+    display: flex;
+    align-items: center; /* Alinha a imagem e o texto verticalmente */
+    justify-content: flex-start; /* Garante que tudo comece pela esquerda */
+    gap: 7%; /* Espaçamento entre a imagem e o texto */
+    padding: 40px;
+}
+
+.profile-pic-container {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    overflow: hidden; /* Garante que o background não ultrapasse os limites da imagem */
+}
+
+.profile-pic-container::before {
+    content: "";
+    background: url('img/1.png') no-repeat center center;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0; /* Coloca o background atrás da imagem */
+}
+
+.profile-pic {
+    position: relative;
+    z-index: 1; /* Garante que a imagem "eu.png" fique sobre o background */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center top;
+    border-radius: 50%;
+}
+
+.about-text {
+    max-width: 500px;
+    text-align: left;
+}
+
+.about-text h2 {
+    margin: 0 0 10px 0; /* Remove a margem superior */
+    font-size: 28px;
+    color: #333;
+}
+
+.about-text p {
+    font-size: 16px;
+    color: #555;
+    line-height: 1.6;
+}
+
+
