--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .hero {
-    background: url('img/1.png') no-repeat center center;
+    background: url('../img/1.png') no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
     height: 500px;
@@ -218,7 +218,7 @@ footer .social-icons a:hover {
 
 .profile-pic-container::before {
     content: "";
-    background: url('img/1.png') no-repeat center center;
+    background: url('../img/1.png') no-repeat center center;
     background-size: cover;
     position: absolute;
     top: 0;
