--- a/css/styleProject.css
+++ b/css/styleProject.css
@@ -64,58 +64,41 @@ body {
 }
 
 
-/* Header */
-.header {
+
+
+header {
     background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px 20px; /* Ajuste no padding para reduzir o tamanho */
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
 }
 
-.header .logo {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.header .logo span {
-    color: #f39c12;
-}
-
-.header .nav {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+header nav {
     display: flex;
+    
+    align-items: center;
 }
 
-.header .nav li {
+header ul {
+    list-style: none;
+    display: flex;
+    margin-left: auto; /* Empurra o menu para a direita */
+}
+
+header ul li {
     margin-left: 20px;
 }
 
-.header .nav li a {
+header ul li a {
     text-decoration: none;
     color: #333;
-    font-weight: 500;
-}
-
-.header .nav li a:hover {
-    color: #f39c12;
-}
-
-.header .social-icons {
-    display: flex;
-}
-
-.header .social-icons a {
-    color: #333;
-    margin-left: 10px;
-    font-size: 18px;
-}
-
-.header .social-icons a:hover {
-    color: #f39c12;
+    font-weight: bold;
 }
 
 /* Hero Section */
